[package]
name = "wksim"
version = "0.1.0"
authors = ["sapir <yasapir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.24.2", features = ["serde_json"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
serde = "1.0.126"
num_enum = "0.5.1"
rand = "0.8.3"
chrono = "0.4.19"

[profile.release]
debug = true
